// Copyright 2020 The Alexandria Foundation
//
// Licensed under the MIT License (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.oracle.com/downloads/licenses/mit-license.html
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package pb;

option go_package = "pkg/transport/pb";

service Author {
  rpc Create(CreateRequest) returns (AuthorMessage) {}
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Get(GetRequest) returns (AuthorMessage) {}
  rpc Update(UpdateRequest) returns (AuthorMessage) {}
  rpc Delete(DeleteRequest) returns (Empty) {}
  rpc Restore(RestoreRequest) returns (Empty) {}
  rpc HardDelete(HardDeleteRequest) returns (Empty) {}
}

message OwnerMessage {
  string id = 1;
  string role = 2;
}

message AuthorMessage {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string displayName = 4;
  string ownershipType = 5;
  string createTime = 6;
  string updateTime = 7;
  string deleteTime = 8;
  bool active = 9;
  bool verified = 10;
  string picture = 11;
  int64 totalViews = 12;
  repeated OwnerMessage owners = 13;
}

/* Body */
message CreateRequest {
  string firstName = 1;
  string lastName = 2;
  string displayName = 3;
  string ownershipType = 4;
  string ownerID = 5;
}

message ListRequest {
  string pageToken = 1;
  string pageSize = 2;
  map<string, string> filterParams = 3;
}

message ListResponse {
  repeated AuthorMessage authors = 1;
  string nextPageToken = 2;
}

message GetRequest {
  string id = 1;
}

message UpdateRequest {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string displayName = 4;
  string ownershipType = 5;
  string ownerID = 6;
  string verified = 7;
  string picture = 8;
  repeated OwnerMessage owners = 9;
}

message DeleteRequest {
  string id = 1;
}

message RestoreRequest {
  string id = 1;
}

message HardDeleteRequest {
  string id = 1;
}

message Empty {}